SubBt/force-app/main/default/objects/Punch_List_item__c/Punch_List_item__c.object-meta.xml
<CustomObject>
    <label>Punch List Line</label>
    <nameField>
        <displayFormat>PLI-{00000}</displayFormat>
        <label>PLI #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Punch List Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>