SubBt/force-app/main/default/objects/Punch_List_item__c/fields/Assigned_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contracting company the punch list item is assigned to.</description>
    <inlineHelpText>Contracting company the punch list item is assigned to.</inlineHelpText>
    <label>Assigned Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Punch List Lines</relationshipLabel>
    <relationshipName>Punch_List_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>