SubBt/force-app/main/default/objects/Punch_List_item__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>Date the work was completed.</description>
    <inlineHelpText>Date the work was complete.</inlineHelpText>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>