SubBt/force-app/main/default/objects/Punch_List_item__c/fields/Date_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Date_Initiated__c</fullName>
    <description>Date the work started.</description>
    <inlineHelpText>Date the work started.</inlineHelpText>
    <label>Date Initiated</label>
    <type>Date</type>
</CustomField>