SubBt/force-app/main/default/objects/Punch_List_item__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Describe the issue in detail, that needs to be addressed.</description>
    <inlineHelpText>Describe the issue in detail, that needs to be addressed</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>