SubBt/force-app/main/default/objects/Punch_List_item__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Where is the punch  list item located?  This is used to help the contractor determine where the issue is.</description>
    <inlineHelpText>Where is the punch  list item located?  This is used to help the contractor determine where the issue is.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Area&apos;s</fullName>
            </value>
            <value>
                <fullName>Back Porch</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Bedroom #1</fullName>
            </value>
            <value>
                <fullName>Bedroom #2</fullName>
            </value>
            <value>
                <fullName>Entry Way</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
            <value>
                <fullName>Exterior Back</fullName>
            </value>
            <value>
                <fullName>Exterior Front</fullName>
            </value>
            <value>
                <fullName>Front Porch</fullName>
            </value>
            <value>
                <fullName>Garage</fullName>
            </value>
            <value>
                <fullName>Hall Bathroom</fullName>
            </value>
            <value>
                <fullName>Hallway</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Living Room</fullName>
            </value>
            <value>
                <fullName>Master Bathroom</fullName>
            </value>
            <value>
                <fullName>Master Bedroom</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>