SubBt/force-app/main/default/objects/Punch_List_item__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>Punch List Name</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>