SubBt/force-app/main/default/objects/Punch_List_item__c/fields/Punch_List__c.field-meta.xml
<CustomField>
    <fullName>Punch_List__c</fullName>
    <label>Punch List</label>
    <referenceTo>Punch_List__c</referenceTo>
    <relationshipName>Punch_List_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>