SubBt/force-app/main/default/objects/Punch_List_item__c/fields/Schedule_Impact__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Impact__c</fullName>
    <description>Will this punch list item impact the current schedule?</description>
    <inlineHelpText>Will this punch list item impact the current schedule?</inlineHelpText>
    <label>Schedule Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>